src/styles/_cluster.scss
:root {
	--postWidth: 40px;
	--postHeight: 55px;
}

.title {
	font-size: 2.25rem;
	font-weight: 600;
	opacity: 0.3;
	padding-left: 10%;
	padding-top: 3.25rem;
	padding-bottom: 1.25rem;
}

.poste {
	width: 100%;
	height: 100%;
	border: 2px solid gray;
	border-radius: 4px;
	&.taken {
		border: 0px solid transparent;
		cursor: pointer;
		img {
			border-radius: 4px;
			width: 100%;
			height: 100%;
			object-fit: cover;
		}
		&:hover img {
			opacity: 0.7
		}
	}
	&.entrance {
		svg {
			font-size: 1.45rem;
		}
	}
	&.valid {
		border: 2px solid #0ea5e9;
	}
}

.cluster {
	display: grid;
	grid-gap: 4px;
	width: 100%;
	justify-content: center;
	&.e1 {
		grid-template-columns: repeat(20, var(--postWidth));
		grid-template-rows: repeat(12, var(--postHeight));
		margin-bottom: 12rem;
	}
	&.e2 {
		grid-template-columns: repeat(31, var(--postWidth));
		grid-template-rows: repeat(14, var(--postHeight));
	}
	@include mobile {
		justify-content: flex-start;
		overflow: scroll;
	}
}

